2022-03-10  Antti Koivisto  <antti@apple.com>

        [CSS Container Queries] Implement new container selection algorithm
        https://bugs.webkit.org/show_bug.cgi?id=237657

        Reviewed by Antoine Quint.

        * web-platform-tests/css/css-contain/container-queries/container-selection-expected.txt:
        * web-platform-tests/css/css-contain/container-queries/unsupported-axis-expected.txt:

2022-03-09  Youenn Fablet  <youenn@apple.com>

        imported/w3c/web-platform-tests/webrtc-extensions/transfer-datachannel.html is flaky
        https://bugs.webkit.org/show_bug.cgi?id=237327

        Reviewed by Eric Carlson.

        The worker is first sending the Opened message, than any message coming from the data channel.
        Wait for the Opened message before proceeding with the rest of the test.

        * web-platform-tests/webrtc-extensions/transfer-datachannel.html:

2022-03-09  Antoine Quint  <graouts@webkit.org>

        [web-animations] counter-increment should support discrete animation
        https://bugs.webkit.org/show_bug.cgi?id=237640

        Reviewed by Antti Koivisto.

        * web-platform-tests/web-animations/animation-model/animation-types/accumulation-per-property-001-expected.txt:
        * web-platform-tests/web-animations/animation-model/animation-types/addition-per-property-001-expected.txt:
        * web-platform-tests/web-animations/animation-model/animation-types/interpolation-per-property-001-expected.txt:

2022-03-09  Antoine Quint  <graouts@webkit.org>

        [web-animations] dominant-baseline should support discrete animation
        https://bugs.webkit.org/show_bug.cgi?id=237645

        Reviewed by Antti Koivisto.

        * web-platform-tests/web-animations/animation-model/animation-types/accumulation-per-property-001-expected.txt:
        * web-platform-tests/web-animations/animation-model/animation-types/addition-per-property-001-expected.txt: