@@ -1,3 +1,15 @@
+2022-03-10  Antoine Quint  <graouts@webkit.org>
+
+        [web-animations] counter-reset should support discrete animation
+        https://bugs.webkit.org/show_bug.cgi?id=237644
+
+        Reviewed by Antti Koivisto.
+
+        Generalize the wrapper added for counter-increment to also handle counter-reset.
+
+        * animation/CSSPropertyAnimation.cpp:
+        (WebCore::CSSPropertyAnimationWrapperMap::CSSPropertyAnimationWrapperMap):
+
 2022-03-10  Antti Koivisto  <antti@apple.com>
 
         [CSS Container Queries] Implement new container selection algorithm
