@@ -1,3 +1,14 @@
+2022-03-10  Antoine Quint  <graouts@webkit.org>
+
+        [web-animations] counter-reset should support discrete animation
+        https://bugs.webkit.org/show_bug.cgi?id=237644
+
+        Reviewed by Antti Koivisto.
+
+        * web-platform-tests/web-animations/animation-model/animation-types/accumulation-per-property-001-expected.txt:
+        * web-platform-tests/web-animations/animation-model/animation-types/addition-per-property-001-expected.txt:
+        * web-platform-tests/web-animations/animation-model/animation-types/interpolation-per-property-001-expected.txt:
+
 2022-03-10  Antti Koivisto  <antti@apple.com>
 
         [CSS Container Queries] Implement new container selection algorithm
